# Backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yaml  gunicorn.conf.py  openapi.yaml  pyproject.toml  requirements.txt  ruff.toml  run.py  smartedu.db
app/: main.py  models.py
app/core/: api_docs.py  config.py  exception_handlers.py  exceptions.py  logging.py  middleware.py  rate_limit.py  rbac.py  security.py
app/db/: __init__.py  base.py  session.py
app/dependencies/: __init__.py  auth.py  db.py  pagination.py  repositories.py  services.py
app/models/: __init__.py  assignment.py  base.py  comment.py  course.py  email_notification.py  grade.py  group.py  models.py  plagiarism_report.py  rbac.py  refresh_session.py  student.py  submission.py  test_case.py  test_result.py  user.py
app/repositories/: __init__.py  base.py  entities.py
app/routers/: __init__.py  api.py  assignments.py  auth.py  comments.py  courses.py  grades.py  groups.py  health.py  items.py  plagiarism_reports.py  students.py  submissions.py  test_cases.py  test_results.py  users.py
app/schemas/: __init__.py  auth.py  entities.py  errors.py  pagination.py  rbac.py
app/services/: __init__.py  assignment.py  auth.py  base.py  bootstrap.py  comment.py  course.py  email_notification.py  entities.py  grade.py  group.py  plagiarism_report.py  student.py  submission.py  test_case.py  test_result.py  user.py
migrations/: env.py
migrations/versions/: 20260407_0001_init.py  (+3 more)
nginx/: nginx.conf
scripts/: bootstrap_rbac.py
(+3 files in other folders)
