[project]
name = "smart-edu-assistant"
version = "0.1.0"
description = "Smart Education Assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.104.0",
    "pydantic-settings>=2.10.0",
    "sqlalchemy>=2.0.37",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.16",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
