[project]
name = "smart-edu-assistant"
version = "0.1.0"
description = "Smart Education Assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.104.0",
    "fastapi-mail>=1.5.8",
    "gunicorn>=23.0.0",
    "PyJWT>=2.10.1",
    "pydantic-settings>=2.10.0",
    "pwdlib[argon2]>=0.2.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.37",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.16",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
